# geoclue

./: .travis.yml  NEWS  configure.ac  meson.build  meson_options.txt
data/: geoclue.service.in  meson.build
demo/: Makefile.am  meson.build  where-am-i.c
docs/: Makefile.am  meson.build
docs/lib/: Makefile.am  meson.build
libgeoclue/: gclue-simple.c  meson.build
public-api/: meson.build
src/: create-unified-xml.py  gclue-client-info.c  gclue-config.c  gclue-location-source.c  gclue-location-source.h  gclue-locator.c  gclue-locator.h  gclue-main.c  gclue-min-uint.c  gclue-min-uint.h  gclue-modem-gps.c  gclue-modem-manager.c  gclue-modem.c  gclue-modem.h  gclue-service-client.c  meson.build  org.freedesktop.GeoClue2.Client.xml
src/agent/: meson.build
